# seminars

./: .clang-tidy  CMakeLists.txt
src/: CMakeLists.txt  lib.cpp  lib.hpp  main.cpp  test.cpp
